Adding functionality to restore the entire Read DB